BOT-2: add handlers / refactoring
